--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,9 @@
                 </div>
 
                 <div class="header-address">
-                    <p class="gray">Visit our showroom in 1234 Street Adress City Address, 1234 <a href="#">Contact
+                    <p class="gray">Visit our showroom in 1234 Street Adress City Address, 1234 <a
+                            href="file:///C:/Users/21266/Documents/GitHub/online-store/contact.html"
+                            target="_blank">Contact
                             Us</a></p>
                 </div>
 
@@ -679,8 +681,63 @@
                 </div>
                 <div class="client-actions">
                     <a href="#" class="grow"><img src="./images/search.png" alt="search"></a>
-                    <a href="#"><img src="./images/shop.png" alt="shop"></a>
-                    <a href="#"><img src="./images/client.png" alt="client"></a>
+                    <div class="checked">
+                        <a href="file:///C:/Users/21266/Documents/GitHub/online-store/discount.html"
+                            target="_blank"><img src="./images/shop.png" alt="shop"></a>
+                        <div class="hidden-minicart">
+                            <h2 class="my-cart">My Cart</h2>
+                            <p class="item-cart">2 item in cart</p>
+                            <a class="view-bttn grow">View or Edit Your Cart</a>
+                            <div class="flx-btwn hidden-table">
+                                <p class="hidden-one">1 <span class="font-14">x</span> </p>
+                                <img src="./images/hidden-desck.png" alt="descktop-msi">
+                                <div class="flx-start">
+                                    <p class="hidden-minicart-info">
+                                        EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...
+                                    </p>
+                                    <div class="hidden-icon">
+                                        <img src="./images/table-icon-1.png" alt="" width="20px" height="20px">
+                                        <img src="./images/table-icon-2.png" alt="" width="20px" height="20px">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="flx-btwn hidden-table">
+                                <p class="hidden-one">1 <span class="font-14">x</span></p>
+                                <img src="./images/hidden-desck.png" alt="descktop-msi">
+                                <div class="flx-start">
+                                    <p class="hidden-minicart-info">
+                                        EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...
+                                    </p>
+                                    <div class="hidden-icon">
+                                        <img src="./images/table-icon-1.png" alt="" width="20px" height="20px">
+                                        <img src="./images/table-icon-2.png" alt="" width="20px" height="20px">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <p class="gray sutotal">Subtotal:<strong class="black-strong">$499.00</strong></p>
+                            <a class="check-bttn grow">Go to Checkout</a>
+                            <a class="yellow-check margn grow" href="#">Check out with <img
+                                    src="./images/paypal (2).png" alt="paypal"></a>
+                        </div>
+                    </div>
+                    <div class="Personal-informations-account">
+                        <a href=""><img src="./images/client.png" alt="client"></a>
+                        <div class="hidden-informations">
+                            <ul class="account-principal-list">
+                                <li class="account-list"><a
+                                        href="file:///C:/Users/21266/Documents/GitHub/online-store/account.html"
+                                        target="_blank" class="account-link">Account</a></li>
+                                <li class="account-list">
+                                    <a href="#" class="account-link">My Wish List (0)</a>
+                                </li>
+                                <li class="account-list"><a href="#" class="account-link">Compare (0)</a> </li>
+                                <li class="account-list"><a href="#" class="account-link">Creat an Account</a></li>
+                                <li class="account-list"><a href="#" class="account-link">Sign In</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -688,7 +745,8 @@
     </header>
     <main>
         <section class="about-us container">
-            <a class="black-clr" href="#">home <span class="blue-color">></span></a>
+            <a class="black-clr" href="file:///C:/Users/21266/Documents/GitHub/online-store/index.html"
+                target="_blank">home <span class="blue-color">></span></a>
             <a class="black-clr" href="#">About-us</a>
             <h1>About Us</h1>
         </section>
