--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                                 City Address, 1234</address>
                         </div>
                         <div class="hidden-contact-us">
-                            <p> Phones: <span class="vr-blue">(00) 1234 5678</span></p>
-                            <p>E-mail: <span class="vr-blue">shop@email.com</span> </p>
+                            <a class="dis-block"> Phones: <span class="vr-blue">(00) 1234 5678</span></a>
+                            <a class="dis-block">E-mail: <span class="vr-blue">shop@email.com</span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -684,9 +685,64 @@
                     </nav>
                 </div>
                 <div class="client-actions">
-                    <a href="" class="grow"><img src="./images/search.png" alt="search"></a>
-                    <a href=""><img src="./images/shop.png" alt="shop"></a>
-                    <a href=""><img src="./images/client.png" alt="client"></a>
+                    <a href="#" class="grow"><img src="./images/search.png" alt="search"></a>
+                    <div class="checked">
+                        <a href="file:///C:/Users/21266/Documents/GitHub/online-store/discount.html"
+                            target="_blank"><img src="./images/shop.png" alt="shop"></a>
+                        <div class="hidden-minicart">
+                            <h2 class="my-cart">My Cart</h2>
+                            <p class="item-cart">2 item in cart</p>
+                            <a class="view-bttn grow">View or Edit Your Cart</a>
+                            <div class="flx-btwn hidden-table">
+                                <p class="hidden-one">1 <span class="font-14">x</span> </p>
+                                <img src="./images/hidden-desck.png" alt="descktop-msi">
+                                <div class="flx-start">
+                                    <p class="hidden-minicart-info">
+                                        EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...
+                                    </p>
+                                    <div class="hidden-icon">
+                                        <img src="./images/table-icon-1.png" alt="" width="20px" height="20px">
+                                        <img src="./images/table-icon-2.png" alt="" width="20px" height="20px">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="flx-btwn hidden-table">
+                                <p class="hidden-one">1 <span class="font-14">x</span></p>
+                                <img src="./images/hidden-desck.png" alt="descktop-msi">
+                                <div class="flx-start">
+                                    <p class="hidden-minicart-info">
+                                        EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...
+                                    </p>
+                                    <div class="hidden-icon">
+                                        <img src="./images/table-icon-1.png" alt="" width="20px" height="20px">
+                                        <img src="./images/table-icon-2.png" alt="" width="20px" height="20px">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <p class="gray sutotal">Subtotal:<strong class="black-strong">$499.00</strong></p>
+                            <a class="check-bttn grow">Go to Checkout</a>
+                            <a class="yellow-check margn grow" href="#">Check out with <img
+                                    src="./images/paypal (2).png" alt="paypal"></a>
+                        </div>
+                    </div>
+                    <div class="Personal-informations-account">
+                        <a href=""><img src="./images/client.png" alt="client"></a>
+                        <div class="hidden-informations">
+                            <ul class="account-principal-list">
+                                <li class="account-list"><a
+                                        href="file:///C:/Users/21266/Documents/GitHub/online-store/account.html"
+                                        target="_blank" class="account-link">Account</a></li>
+                                <li class="account-list">
+                                    <a href="#" class="account-link">My Wish List (0)</a>
+                                </li>
+                                <li class="account-list"><a href="#" class="account-link">Compare (0)</a> </li>
+                                <li class="account-list"><a href="#" class="account-link">Creat an Account</a></li>
+                                <li class="account-list"><a href="#" class="account-link">Sign In</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -706,10 +762,12 @@
 
             <div class="new-product-heading flx-btwn">
                 <h1>New Products</h1>
-                <a href="#"> <u>See All New Products</u> </a>
+                <a href="file:///C:/Users/21266/Documents/GitHub/online-store/series.html" target="_blank"> <u>See All
+                        New Products</u> </a>
             </div>
             <div class="available-cards slideshow flx-btwn">
-                <a href="#" class="fix-scrl"><img src="./images/instagram (2).png" alt="instagram"></a>
+                <a href="file:///C:/Users/21266/Documents/GitHub/online-store/contact.html" target="_blank"
+                    class="fix-scrl grow"><img src="./images/instagram (2).png" alt="instagram"></a>
                 <div class="flx-btwn align-slf">
                     <div class="stock-cards">
 
@@ -865,7 +923,8 @@
                 <div class="product-catalog flx-col bg-img-one">
                     <h2>Custome
                         Builds</h2>
-                    <a href="#"><u>See All Products</u></a>
+                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/add-cart.html" target="_blank"><u>See
+                            All Products</u></a>
                 </div>
 
                 <div class="align-slf flx-btwn">
@@ -993,7 +1052,8 @@
                 <div class="flx-col bg-img-two">
                     <h2>MSI
                         Laptops</h2>
-                    <a href="#"><u>See All Products</u></a>
+                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/add-cart.html" target="_blank"><u>See
+                            All Products</u></a>
                 </div>
                 <div class="flx-btwn align-slf">
                     <div class="stock-cards">
@@ -1117,7 +1177,8 @@
 
                 <div class="flx-col bg-img-three">
                     <h2>Desktops</h2>
-                    <a href="#"><u>See All Products</u></a>
+                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/add-cart.html" target="_blank"><u>See
+                            All Products</u></a>
                 </div>
                 <div class="flx-btwn align-slf">
                     <div class="stock-cards">
@@ -1229,7 +1290,8 @@
                 <div class="flx-col bg-img-four">
                     <h2>Gaming
                         Monitors</h2>
-                    <a href="#"><u>See All Products</u></a>
+                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/add-cart.html" target="_blank"><u>See
+                            All Products</u></a>
                 </div>
                 <div class="align-slf flx-btwn">
                     <div class="stock-cards">
