--- a/specs.html
+++ b/specs.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/account.css">
     <link rel="stylesheet" href="./styles/shopping.css">
     <link rel="stylesheet" href="./styles/Dashboard.css">
-    <link rel="stylesheet" href="./styles/add-cart.css">
+
     <link rel="stylesheet" href="./styles/series.css">
     <link rel="stylesheet" href="./styles/about-product.css">
     <link rel="stylesheet" href="./styles/specs.css">
@@ -55,7 +55,9 @@
                 </div>
 
                 <div class="header-address">
-                    <p class="gray">Visit our showroom in 1234 Street Adress City Address, 1234 <a href="#">Contact
+                    <p class="gray">Visit our showroom in 1234 Street Adress City Address, 1234 <a
+                            href="file:///C:/Users/21266/Documents/GitHub/online-store/contact.html"
+                            target="_blank">Contact
                             Us</a></p>
                 </div>
 
@@ -683,8 +685,63 @@
                 </div>
                 <div class="client-actions">
                     <a href="" class="grow"><img src="./images/search.png" alt="search"></a>
-                    <a href=""><img src="./images/shop.png" alt="shop"></a>
-                    <a href=""><img src="./images/client.png" alt="client"></a>
+                    <div class="checked">
+                        <a href="file:///C:/Users/21266/Documents/GitHub/online-store/discount.html"
+                            target="_blank"><img src="./images/shop.png" alt="shop"></a>
+                        <div class="hidden-minicart">
+                            <h2 class="my-cart">My Cart</h2>
+                            <p class="item-cart">2 item in cart</p>
+                            <a class="view-bttn grow">View or Edit Your Cart</a>
+                            <div class="flx-btwn hidden-table">
+                                <p class="hidden-one">1 <span class="font-14">x</span> </p>
+                                <img src="./images/hidden-desck.png" alt="descktop-msi">
+                                <div class="flx-start">
+                                    <p class="hidden-minicart-info">
+                                        EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...
+                                    </p>
+                                    <div class="hidden-icon">
+                                        <img src="./images/table-icon-1.png" alt="" width="20px" height="20px">
+                                        <img src="./images/table-icon-2.png" alt="" width="20px" height="20px">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="flx-btwn hidden-table">
+                                <p class="hidden-one">1 <span class="font-14">x</span></p>
+                                <img src="./images/hidden-desck.png" alt="descktop-msi">
+                                <div class="flx-start">
+                                    <p class="hidden-minicart-info">
+                                        EX DISPLAY : MSI Pro 16 Flex-036AU 15.6 MULTITOUCH All-In-On...
+                                    </p>
+                                    <div class="hidden-icon">
+                                        <img src="./images/table-icon-1.png" alt="" width="20px" height="20px">
+                                        <img src="./images/table-icon-2.png" alt="" width="20px" height="20px">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <p class="gray sutotal">Subtotal:<strong class="black-strong">$499.00</strong></p>
+                            <a class="check-bttn grow">Go to Checkout</a>
+                            <a class="yellow-check margn grow" href="#">Check out with <img
+                                    src="./images/paypal (2).png" alt="paypal"></a>
+                        </div>
+                    </div>
+                    <div class="Personal-informations-account">
+                        <a href=""><img src="./images/client.png" alt="client"></a>
+                        <div class="hidden-informations">
+                            <ul class="account-principal-list">
+                                <li class="account-list"><a
+                                        href="file:///C:/Users/21266/Documents/GitHub/online-store/account.html"
+                                        target="_blank" class="account-link">Account</a></li>
+                                <li class="account-list">
+                                    <a href="#" class="account-link">My Wish List (0)</a>
+                                </li>
+                                <li class="account-list"><a href="#" class="account-link">Compare (0)</a> </li>
+                                <li class="account-list"><a href="#" class="account-link">Creat an Account</a></li>
+                                <li class="account-list"><a href="#" class="account-link">Sign In</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -711,8 +768,9 @@
                         </div>
                     </div>
                     <div class="bttns">
-                        <a class="blue-check check-bttn" href="#">Add to Cart</a>
-                        <a class="yellow-check check-bttn" href="#"><img src="./images/paypal (2).png" alt="paypal"></a>
+                        <a class="blue-check check-buttn" href="#">Add to Cart</a>
+                        <a class="yellow-check check-buttn" href="#"><img src="./images/paypal (2).png"
+                                alt="paypal"></a>
                     </div>
                 </div>
             </div>
@@ -725,7 +783,8 @@
 
                     <div class="trident-main">
 
-                        <a class="black-clr" href="#">home <span class="blue-color">></span></a>
+                        <a class="black-clr" href="file:///C:/Users/21266/Documents/GitHub/online-store/index.html"
+                            target="_blank">home <span class="blue-color">></span></a>
                         <a class="black-clr" href="#">Laptops <span class="blue-color">></span></a>
                         <a class="black-clr gray" href="#"> MSI WS Series</a>
                         <h2>MSI MPG Trident 3</h2>
@@ -745,7 +804,9 @@
                             </div>
                         </div>
                         <div class="contact-us">
-                            <p class="contact">Have a Question? <a class="blue-text" href="#"><u>Contact
+                            <p class="contact">Have a Question? <a class="blue-text"
+                                    href="file:///C:/Users/21266/Documents/GitHub/online-store/contact.html"
+                                    target="_blank"><u>Contact
                                         Us</u></a></p>
                             <p class="sku">SKU D5515AI</p>
                         </div>
@@ -790,7 +851,8 @@
                 </div>
                 <div class="flx-btwn">
 
-                    <p class="more-info"><span class="plus">+</span> More information</p>
+                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/Dashboard.html#" target="_blank"
+                        class="more-info black-clr"><span class="plus">+</span> More information</a>
 
                     <div class="dot">
                         <img src="./images/dot.png" alt="dots">
