--- a/about-product.html
+++ b/about-product.html
@@ -758,12 +758,9 @@
         <section class="about-products bordr-bottm">
             <div class="container flx-btwn">
                 <div class="about FLx">
-                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/about-product.html" target="_blank"
-                        class="font bordr-blue">About Product</a>
-                    <a target="_blank" href="file:///C:/Users/21266/Documents/GitHub/online-store/details.html"
-                        class="font grey hovr-bordr">Details</a>
-                    <a target="_blank" href="file:///C:/Users/21266/Documents/GitHub/online-store/specs.html"
-                        class="font grey hovr-bordr">Specs</a>
+                    <a href="./about-product.html" class="font bordr-blue">About Product</a>
+                    <a href="./details.html" class="font grey hovr-bordr">Details</a>
+                    <a href="./specs.html" class="font grey hovr-bordr">Specs</a>
                 </div>
 
                 <div class="sale FLx">
@@ -789,12 +786,11 @@
 
                     <div class="trident-main">
 
-                        <a class="black-clr" href="file:///C:/Users/21266/Documents/GitHub/online-store/index.html"
-                            target="_blank">home <span class="blue-color">></span></a>
-                        <a class="black-clr" href="#">Laptops <span class="blue-color">></span></a>
-                        <a class="black-clr gray" href="#"> MSI WS Series</a>
+                        <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
+                        <a class="black-clr" href="./index.html">Laptops <span class="blue-color">&#10095;</span></a>
+                        <a class="black-clr gray" href="./series.html"> MSI WS Series</a>
                         <h2>MSI MPG Trident 3</h2>
-                        <a class="black-clr blue-text" href="#">Be the first to review this product</a>
+                        <a class="black-clr blue-text" href="./series.html">Be the first to review this product</a>
                         <p class="msi">MSI MPG Trident 3 10SC-005AU Intel i7 10700F, 2060 SUPER, 16GB RAM, 512GB SSD,
                             2TB
                             HDD, Windows
@@ -803,8 +799,7 @@
                         <input type="radio" name="radio">
                         <input type="radio" name="radio">
                         <div class="contact-us">
-                            <p class="contact">Have a Question? <a class="blue-text"
-                                    href="file:///C:/Users/21266/Documents/GitHub/online-store/contact.html"
+                            <p class="contact">Have a Question? <a class="blue-text" href="./contact.html"
                                     target="_blank"><u>Contact
                                         Us</u></a></p>
                             <p class="sku">SKU D5515AI</p>
@@ -817,9 +812,10 @@
                     <div class="desk-trident">
                         <div class="flx-start">
                             <div class="icons">
-                                <img class="grow" src="./images/heart.png" alt="heart">
-                                <img class="grow" src="./images/rythm.png" alt="rythm">
-                                <img class="grow" src="./images/Email (2).png" alt="email">
+                                <button><img class="grow" src="./images/heart.png" alt="heart"></button>
+                                <button><img class="grow" src="./images/rythm.png" alt="rythm"></button>
+                                <a href="mailto:san@antonio.net"><img class="grow" src="./images/Email (2).png"
+                                        alt="email"></a>
                             </div>
 
                             <div class="trident-descktop">
@@ -837,7 +833,7 @@
 
 
                             <p class="free-months"><span class="own">own</span> it now, up to 6 months interest
-                                free <a href="#"><u>learn
+                                free <a href="./contact.html"><u>learn
                                         more</u></a>
 
                             </p>
@@ -850,8 +846,8 @@
                 </div>
                 <div class="flx-btwn">
 
-                    <a href="file:///C:/Users/21266/Documents/GitHub/online-store/Dashboard.html#" target="_blank"
-                        class="more-info black-clr"><span class="plus">+</span> More information</a>
+                    <a href="./Dashboard.html#" target="_blank" class="more-info black-clr"><span class="plus">+</span>
+                        More information</a>
 
                     <div class="dot">
                         <img src="./images/dot.png" alt="dots">
