--- a/account.html
+++ b/account.html
@@ -752,7 +752,7 @@
     <main>
         <section class="container">
             <nav class="breadcrumbs">
-                <a class="black-clr" href="./index.html">home <span class="blue-color">></span></a>
+                <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
                 <a class="black-clr" href="./account.html">Login</a>
             </nav>
             <h1 class="top-heading">Customer Login</h1>
