--- a/conditions.html
+++ b/conditions.html
@@ -751,7 +751,7 @@
     <main>
         <section class="container">
             <nav class="breadcrumbs">
-                <a class="black-clr" href="./index.html">home <span class="blue-color">></span></a>
+                <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
                 <a href="./account.html" class="black-clr" href="./contact.html">Login</a>
             </nav>
             <h1 class="top-heading">Shop Terms & Conditions</h1>
