--- a/about-us.html
+++ b/about-us.html
@@ -750,7 +750,7 @@
     <main>
         <section class="about-us container">
             <nav class="breadcrumbs">
-                <a class="black-clr" href="./index.html">home <span class="blue-color">></span></a>
+                <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
 
                 <a class="black-clr" href="./about-product.html">About-us</a>
             </nav>
