--- a/checkout.html
+++ b/checkout.html
@@ -754,8 +754,8 @@
         <section class="container">
             <nav class="breadcrumbs">
 
-                <a class="black-clr" href="./index.html">home <span class="blue-color">></span></a>
-                <a class="black-clr" href="./shopping.html">Shopping Cart <span class="blue-color">></span></a>
+                <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
+                <a class="black-clr" href="./shopping.html">Shopping Cart <span class="blue-color">&#10095;</span></a>
                 <a class="black-clr" href="./index.html">Checkout Process</a>
             </nav>
             <div class="flx-btwn">
