--- a/series.html
+++ b/series.html
@@ -762,10 +762,10 @@
         </section>
         <section class="container">
             <nav class="breadcrumbs">
-                <a class="black-clr" href="./index.html">home <span class="blue-color">></span></a>
-                <a class="black-clr" href="./index.html">Laptops <span class="blue-color">></span></a>
+                <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
+                <a class="black-clr" href="./index.html">Laptops <span class="blue-color">&#10095;</span></a>
                 <a class="black-clr" href="./about-product.html">Everyday Use Notebooks<span
-                        class="blue-color">></span></a>
+                        class="blue-color">&#10095;</span></a>
 
                 <a class="black-clr gray" href="./index.html"> MSI WS Series</a>
                 <nav>
@@ -776,11 +776,11 @@
             <h1 class="top-heading">MSI PS Series (20)</h1>
             <div class="flx-btwn">
 
-                <div class="slide">
+                <div class="slide-back">
 
 
 
-                    <a href="./index.html" class="back black-clr"><span class="slide-padd">‹</span> Back</a>
+                    <a href="./index.html" class="back black-clr"><span class="slide-padd">&#10096;</span> Back</a>
 
 
 
