--- a/shopping.html
+++ b/shopping.html
@@ -750,7 +750,7 @@
         <section class="container">
 
             <nav class="breadcrumbs">
-                <a class="black-clr" href="./index.html">home <span class="blue-color">></span></a>
+                <a class="black-clr" href="./index.html">home <span class="blue-color">&#10095;</span></a>
                 <a class="black-clr" href="./account.html">Login</a>
             </nav>
             <h1 class="top-heading padding">Shopping Cart</h1>
