--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
 
             <div class="new-product-heading flx-btwn">
                 <h2>New Products</h2>
-                <a href="./series.html" target="_blank"> <u>See All
+                <a href="./series.html"> <u>See All
                         New Products</u> </a>
             </div>
             <div class="available-cards slideshow flx-btwn">
